# f1-intelligence

./: package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md  vercel.json
api/: index.py
artifacts/api-server/: f1_data.py  main.py  ml_model.py  requirements.txt  train_model.py
artifacts/api-server/.f1_cache/: _2021.json  _2021_14_results.json  _2021_1_results.json  _2021_21_results.json  _2021_3_results.json  _2022.json  _2022_10_results.json  _2022_11_results.json  _2022_12_results.json  _2022_13_results.json  _2022_14_results.json  _2022_15_results.json  _2022_16_results.json  _2022_17_results.json  _2022_18_results.json  _2022_19_results.json  _2022_1_qualifying.json  _2022_1_results.json  _2022_20_results.json  _2022_21_results.json  _2022_22_results.json  _2022_2_results.json  _2022_3_results.json  _2022_4_results.json  _2022_5_qualifying.json  _2022_5_results.json  _2022_6_results.json  _2022_7_results.json  _2022_8_results.json  _2022_9_results.json  _2022_driverStandings.json  _2022_drivers.json  _2023.json  _2023_10_results.json  _2023_11_results.json  _2023_12_results.json  _2023_13_results.json  _2023_14_results.json  _2023_15_results.json  _2023_16_results.json  (+74 more)
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/model/: f1_meta.json  f1_model.ubj
artifacts/f1-intelligence/: index.html  package.json  vite.config.ts
artifacts/f1-intelligence/.replit-artifact/: artifact.toml
attached_assets/: Pasted--Project-Brief-PRD-F1-ML-PREDICTOR-V1-0-1-Project-Overv_1783981968205.txt
lib/api-spec/: openapi.yaml
(+15 files in other folders)
