[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "fastf1>=3.8.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.51.0",
    "xgboost>=3.2.0",
]
